Update 'sdk3btyge-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:e25110e01b9658b4eadcb574222bd988c119f7f6@sha256:a88d3bd91b580b0bee1f66b8dd49e8776b8755d5f4d1f194188eac01737149b2

--- a/components/sdk3btyge-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/sdk3btyge-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sdk3btyge-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:e25110e01b9658b4eadcb574222bd988c119f7f6@sha256:a88d3bd91b580b0bee1f66b8dd49e8776b8755d5f4d1f194188eac01737149b2
+          name: container-image
